# ButFun

./: .env.staging  .gitignore  .thumbnail  ButFun 素材展示.html  CLAUDE.md  Cargo.toml  README.md  build.gradle  build.rs  dev2review.md  package.json  pr_body.md  settings.gradle
.cargo/: audit.toml
.claude/commands/: goal.md
.github/: dependabot.yml
crates/world-core/: Cargo.toml
demo/: game.js
deploy/cloudflared/: config.example.yml
deploy/systemd/: butfun-deploy.service  butfun-deploy.timer  butfun-devloop-feedback.service  butfun-devloop-feedback.timer  butfun-devloop.service  butfun-devloop.timer  butfun-oncall.service  butfun.service
docs/: ASSETS_PROMPT.md  ASSET_INTEGRATION.md  AUTONOMOUS_OPS.md  BACKLOG.md  DEPLOY_CLOUDFLARE_TUNNEL.md  GAME_DESIGN.md  IDEAS_ETHERVOX.md  ONCALL_RC.md  PLAN.md  PLAN_3D_STREAM_GAME.md  PLAN_AI_INHABITED_WORLD.md  PLAN_AI_NPC_GROWTH.md  PLAN_AI_NPC_GROWTH_WAVE2.md  PLAN_DIGGABLE_WORLD.md  PLAN_ECONOMY_REALISTIC.md  PLAN_ETHERVOX.md  PLAN_INFINITE_WORLD.md  PLAN_LIVING_ECOSYSTEM.md  PLAN_MULTI_RENDERER.md  PLAN_NETCODE_INPUTREPLAY.md  PLAN_SELF_RUNNING_WORLD.md  PLAN_UI_REDESIGN.md  PLAN_VISUAL_POLISH.md  PLAN_VOXEL_WORLD.md  ROADMAP.md  SETUP_ON_SERVER.md  VISION_AI_EMERGENT_ECOSYSTEM.md
migrations/: 0001_create_players.sql  0001_players.sql  0001_players_positions.sql  0002_inventories.sql  0003_fields.sql  0004_daynight.sql  0005_users.sql  0006_suggestions.sql  0007_reset_plots.sql  0008_add_wallet_expansions.sql  0008_full_clean_reset.sql  0010_tile_deltas.sql  0011_add_player_exp.sql  0012_land_plots.sql  0013_land_plot_purpose.sql  0014_equipment_slots.sql  0014_workbench.sql  0015_job_mastery.sql  0016_npc_memory.sql  0017_npc_trade_stats.sql  0018_friends.sql  0019_appearance.sql  0020_wardrobe.sql  0021_sprinklers.sql  0022_guilds.sql  0023_town_project.sql  0024_stat_points.sql  0025_skill_mastery.sql  0026_field_guide.sql  0027_terrain_atlas.sql  0028_sky_codex.sql  0029_player_cheers.sql  0030_visit_streaks.sql  0031_welcome_kits.sql
ops/: README.md  bios.md  pipeline.md  platforms.md  playbook.md  profile.md
ops/templates/: proposal-en.md  proposal-es.md  proposal-zh.md  quote.md
scripts/: agent.sh  build-wasm.sh  deploy-enable.sh  deploy-staging.sh  deploy.sh  devloop-feedback.sh  devloop.sh  e2e-gameloop.sh  e2e-smoke.sh  gen_voxel_pwa_icons.mjs  integrator.sh  oncall.sh  planner.sh
scripts/auto/: butfun-auto.sh  enable.sh  notify.sh  reviewer.prompt  worker.prompt
scripts/e2e/: gameloop-smoke.mjs  smoke.mjs
scripts/ops/: security-scan.sh
scripts/qa/: ai-explorer-live.mjs  ai-resident-bot.mjs  browser-qa.mjs  explorer-start.sh  explorer-stop.sh  move-qa.mjs  (+61 more)
src/: achievement.rs  active_skill.rs  activity_chain.rs  aether_draw.rs  affliction.rs  ancient_inscription.rs  angler_bond.rs  apiary.rs  appearance.rs  auction.rs  auth.rs  boss_ai.rs  boss_roar.rs  boss_slam.rs  bottle_drift.rs  bounty_board.rs  bounty_harvest.rs  busking.rs  busking_ensemble.rs  busking_repertoire.rs  campfire.rs  charged_strike.rs  civic_vote.rs  class.rs  combat.rs  combat_mark.rs  community_gathering.rs  companion_revive.rs  compost.rs  connections.rs  constellation.rs  cooking_steps.rs  coop_build.rs  coop_labour.rs  craft_ceremony.rs  crafting.rs  crop_demand.rs  crop_raid.rs  crop_rotation.rs  crop_variety.rs  (+417 more)
web/: game.js  index.html  manifest.webmanifest
(+17 files in other folders)
