[package]
name = "butfun-server"
version = "0.1.0"
edition = "2021"
description = "ButFun — 蒸汽龐克太空歌劇療癒多人世界（Phase 0 權威伺服器骨架）"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Google OAuth + 簽章 session cookie
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15"
urlencoding = "2"

[profile.dev]
opt-level = 1
