[package]
name = "butfun-server"
version = "0.1.0"
edition = "2021"
description = "ButFun — 蒸汽龐克太空歌劇療癒多人世界（Phase 0 權威伺服器骨架）"

[dependencies]
# 世界核心(與渲染無關的確定性世界邏輯):伺服器用它的 biome_at 判定地形 → 生態域決定內容。
world-core = { path = "crates/world-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Google OAuth + 簽章 session cookie
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"
dotenvy = "0.15"
urlencoding = "2"
# Phase 0-E 跨重啟持久化：Postgres 連線池 + migration。query 走 runtime API（非 query! 巨集），
# 故 build/test 不需 live DB。沒設 DATABASE_URL 時整層退回記憶體/JSONL（見 db.rs / positions.rs）。
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
] }

[dev-dependencies]
# 測試用暫存檔（feed 行數上限 / compaction 等價驗證）
tempfile = "3"

[profile.dev]
opt-level = 1

# 世界核心(與渲染無關的確定性世界邏輯):同時供伺服器(原生 lib)與前端(wasm32 cdylib)。
# root package(butfun-server)本身自動是工作區成員,這裡只需多列 world-core。
[workspace]
members = ["crates/world-core"]
